--- a/src/components/FeaturesGridSection.astro
+++ b/src/components/FeaturesGridSection.astro
@@ -116,7 +116,7 @@ const features = [
             </h2>
             
             <p class='text-white/70 text-lg max-w-3xl mx-auto'>
-                With carefully structured content and comprehensive resources, the Creators Club ensures you 
+                With carefully structured content and comprehensive resources, the Klub kreatora ensures you 
                 gain all the tools, techniques, and strategies needed to excel in video editing.
             </p>
         </div>
@@ -158,7 +158,7 @@ const features = [
                 </p>
                 
                 <!-- CTA -->
-                <CTAButton href='#pricing'>Join the Creators Club Now</CTAButton>
+                <CTAButton href='#pricing'>Join the Klub kreatora Now</CTAButton>
             </div>
 
             <!-- Trust Indicators -->
