--- a/src/components/PricingSection.astro
+++ b/src/components/PricingSection.astro
@@ -16,7 +16,7 @@ const plans = [
             'Monthly Live Calls + Q&A',
             '14 Days Money-Back Guarantee',
         ],
-        cta: 'Join the Creators Club Now',
+        cta: 'Join the Klub kreatora Now',
         popular: true,
         badge: 'Most Popular',
     },
