--- a/src/components/StatsSocialProofSection.astro
+++ b/src/components/StatsSocialProofSection.astro
@@ -59,7 +59,7 @@ const stats = [
 
 const testimonials = [
     {
-        quote: "The Creators Club completely transformed my approach to video editing. I went from struggling freelancer to landing my dream client within 3 months.",
+        quote: "The Klub kreatora completely transformed my approach to video editing. I went from struggling freelancer to landing my dream client within 3 months.",
         author: "Sarah M.",
         role: "Video Editor & Content Creator",
         since: "Member since March 2024"
