--- a/src/components/WelcomeSection.astro
+++ b/src/components/WelcomeSection.astro
@@ -91,7 +91,7 @@ const benefits = [
                 <span
                     class='bg-gradient-to-r from-orange-400 to-yellow-400 bg-clip-text text-transparent'
                 >
-                    Creators Club
+                    Klub kreatora
                 </span>
             </h2>
 
@@ -141,7 +141,7 @@ const benefits = [
                 <div class='relative rounded-2xl overflow-hidden'>
                     <img
                         src='https://creators-club.com/wp-content/uploads/mockup-1.png'
-                        alt='Creators Club Mockup'
+                        alt='Klub kreatora Mockup'
                         class='w-full object-contain shadow-2xl'
                     />
                     <!-- Image Overlay -->
@@ -232,7 +232,7 @@ const benefits = [
                 </p>
 
                 <!-- Final CTA -->
-                <CTAButton href='#pricing'>Join the Creators Club Now</CTAButton
+                <CTAButton href='#pricing'>Join the Klub kreatora Now</CTAButton
                 >
             </div>
 
