--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title='Contact Us - Creators Club'>
+<Layout title='Contact Us - Klub kreatora'>
     <main
         class='min-h-screen bg-gradient-to-br from-[#0a0a0f] via-[#1a1f2e] to-[#0f1419] py-24'
     >
@@ -28,7 +28,7 @@ import Layout from '../layouts/Layout.astro';
                         Get in Touch
                     </h1>
                     <p class='text-white/70 text-lg max-w-2xl mx-auto'>
-                        Have questions about Creators Club? Need support? We're
+                        Have questions about Klub kreatora? Need support? We're
                         here to help. Send us a message and we'll get back to
                         you within 24 hours.
                     </p>
@@ -278,15 +278,15 @@ import Layout from '../layouts/Layout.astro';
                                             courses
                                         </p>
                                         <a
-                                            href='mailto:support@creatorsclub.com'
+                                            href='mailto:contact@klubkreatora.com'
                                             class='text-orange-400 hover:text-yellow-400 transition-colors'
                                         >
-                                            support@creatorsclub.com
+                                            contact@klubkreatora.com
                                         </a>
                                     </div>
                                 </div>
 
-                                <div class='flex items-start space-x-4'>
+                                <!-- <div class='flex items-start space-x-4'>
                                     <div
                                         class='w-10 h-10 bg-orange-500/20 rounded-lg flex items-center justify-center flex-shrink-0'
                                     >
@@ -316,7 +316,7 @@ import Layout from '../layouts/Layout.astro';
                                             Join Discord
                                         </a>
                                     </div>
-                                </div>
+                                </div> -->
 
                                 <div class='flex items-start space-x-4'>
                                     <div
@@ -341,11 +341,11 @@ import Layout from '../layouts/Layout.astro';
                                             Available Monday-Friday, 9 AM - 6 PM
                                             EST
                                         </p>
-                                        <button
+                                        <!-- <button
                                             class='text-orange-400 hover:text-yellow-400 transition-colors'
                                         >
                                             Start Live Chat
-                                        </button>
+                                        </button> -->
                                     </div>
                                 </div>
                             </div>
