--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title='Login - Creators Club'>
+<Layout title='Login - Klub kreatora'>
     <main
         class='min-h-screen bg-gradient-to-br from-[#0a0a0f] via-[#1a1f2e] to-[#0f1419] flex items-center justify-center py-12 px-4'
     >
@@ -28,7 +28,7 @@ import Layout from '../layouts/Layout.astro';
                         Welcome Back
                     </h1>
                     <p class='text-white/70'>
-                        Sign in to your Creators Club account
+                        Sign in to your Klub kreatora account
                     </p>
                 </div>
 
@@ -142,7 +142,7 @@ import Layout from '../layouts/Layout.astro';
                         href='/#pricing'
                         class='text-orange-400 hover:text-yellow-400 transition-colors font-medium'
                     >
-                        Join Creators Club →
+                        Join Klub kreatora →
                     </a>
                 </div>
 
