--- a/src/components/VideoModal.astro
+++ b/src/components/VideoModal.astro
@@ -39,7 +39,7 @@
                 id='video-modal-title'
                 class='text-2xl font-bold text-white mb-2'
             >
-                Creators Club Preview
+                Klub kreatora Preview
             </h2>
             <p class='text-white/70 text-sm'>
                 See what's inside our comprehensive video editing course
@@ -56,7 +56,7 @@
                     id='preview-video'
                     class='w-full h-full'
                     src=''
-                    title='Creators Club Preview Video'
+                    title='Klub kreatora Preview Video'
                     frameborder='0'
                     allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture'
                     allowfullscreen
@@ -191,4 +191,3 @@
         (window as any).openVideoModal = openModal;
     });
 </script>
-
